--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-safe-area-context": "4.4.1",
     "expo-constants": "~14.0.2",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-gesture-handler": "~2.8.0",
+    "@react-native-picker/picker": "2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
