--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "set NODE_OPTIONS=--openssl-legacy-provider && expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.16.19",
     "@react-native-community/hooks": "^2.8.1",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
-    "expo": "~47.0.8",
+    "expo": "^44.0.6",
+    "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
-    "react-native-screens": "~3.18.0",
-    "react-native-safe-area-context": "4.4.1",
-    "expo-constants": "~14.0.2",
     "react-native-gesture-handler": "~2.8.0",
-    "@react-native-picker/picker": "2.4.8"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
