--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^6.9.6",
     "expo": "^47.0.9",
     "expo-constants": "~14.0.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "react": "18.1.0",
@@ -25,14 +27,13 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
-    "yup": "^0.32.11",
-    "expo-image-picker": "~14.0.2",
-    "expo-location": "~15.0.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "prettier": "2.8.3",
     "typescript": "^4.6.3"
   },
   "private": true
