--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-camera-roll/camera-roll": "^5.7.2",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-picker/picker": "^2.4.8",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/native-stack": "^6.9.6",
+    "@react-navigation/native-stack": "^6.9.9",
     "expo": "^47.0.9",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
@@ -24,6 +24,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-permissions": "^3.8.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
